Insere artigos de morris, dowling e marvin

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -539,3 +539,43 @@
   keywords	= {music harmony and theory}
 }
 
+@Article{morris98:voice,
+  author =       {Robert D. Morris},
+  title =        {Voice-Leading Spaces},
+  journal =      {Music Theory Spectrum},
+  year =         1998,
+  volume =    20,
+  number =    2,
+  pages =     {175--208},
+  abstract	=    {This paper studies networks of pitch-classes that
+                  model voice-leading-the progression of pitches to
+                  form horizontal "voices" or "lines." While tonal
+                  voice-leading depends on distinctions between step
+                  and leap, consonance and dissonance, chord-tone and
+                  embellishment, voice-leading in post-tonal music
+                  simply and non-normatively describes the motions of
+                  pitches, one to another. First, I stipulate some
+                  limitations on totally free voice-leading and
+                  construct a complete taxonomy of voice-leading
+                  motions. Then I examine Richard Cohn's explicit
+                  coupling of transformation and voice-leading of
+                  major and minor triads as represented on Hugo
+                  Riemann's tonnetz. The tonnetz is a traditional
+                  example of what I have previously called a
+                  compositional space; such spaces are out-of-time
+                  networks of pcs that can underlie compositional or
+                  improvisational action. After studying various
+                  transformations of the tonnetz, voice-leading is
+                  implemented by the use of another type of
+                  compositional space, two-partition graphs. These
+                  graphs are generalized so that pairs of pcsets
+                  connected in the graph need not be disjoint nor form
+                  members of only one set class. Any specified voice
+                  motions can be stipulated. The result is a
+                  collection of voice-leading spaces, a new category
+                  of compositional space. Finally, I describe an
+                  algorithm that allows one to construct voice-leading
+                  spaces of any degree of complexity or closure.},
+  keywords	=    {music harmony and theory}
+}
+
