--- a/perception.bib
+++ b/perception.bib
@@ -172,6 +172,32 @@
   keywords	= {perception}
 }
 
+@Article{marvin91:perception,
+  author =       {Elizabeth West Marvin},
+  title =        {The Perception of Rhythm in Non-tonal Music: Rhythmic Contours in the Music of Edgard Varese},
+  journal =      {Music Theory Spectrum},
+  year =         1991,
+  volume =    13,
+  number =    1,
+  pages =     {61--78},
+  abstract     = {This paper develops a theory that models
+                  nonbeat-based rhythms as "rhythmic contours" of
+                  relative longs and shorts, drawing upon discussions
+                  of temporal spaces appearing in recent work of
+                  Robert Morris and David Lewin and upon various
+                  music-psychological investigations of rhythmic
+                  perception. A new type of temporal space is
+                  proposed: a duration space (d-space) analogous to
+                  Morris's contour space, in which elements are
+                  ordered sequentially from short to long. After
+                  developing equivalence relations for d-space
+                  segments, illustrated by excerpts from Edgard
+                  Varese's Octandre, the paper concludes with an
+                  analysis of Density 21.5 that focuses upon
+                  relationships among rhythmic contours.},
+  keywords = {perception}
+}
+
 @Article{	  rogers87:four,
   author	= {George L. Rogers},
   title		= {Four Cases of Pitch-specific Chromesthesia in Trained
@@ -182,6 +208,35 @@
   pages		= {198--207},
   where		= {paper},
   keywords	= {perception}
+}
+
+@Article{dowling78:scale,
+  author =       {W. Jay Dowling},
+  title =        {Scale and Contour: Two Components of a Theory of Memory for Melodies},
+  journal =      {Psychological Review},
+  year =         1978,
+  volume =    85,
+  number =    4,
+  pages =     {341--354},
+  abstract =     {This article develops a two-component model of how
+                  melodies are stored in long and short-term
+                  memory. The first component is the overlearned
+                  perceptual-motor schema of the musical
+                  scale. Evidence is presented supportin the lifetime
+                  stability of scales and the fact that they seem to
+                  have basically logarithmic form
+                  cross-culturally. The second component, melodic
+                  contour, is shown to function independently of pitch
+                  interval sequence in memory. A new experiment is
+                  reported, using a recognition memory paradigm in
+                  which tonal standard stimuli are confused with
+                  same-contour comparisons, whether they are exact
+                  transpositions of tonal answers, but not with atonal
+                  comparison stimuli. This result is contrasted with
+                  earlier owrk using atonal melodies and shows the
+                  interdependence of the two components, scale and
+                  contour.},
+  keywords =     {perception}
 }
 
 @Article{	  takeuchi93:absolute,
