Insere artigo cohn - teoria neo-riemaniana

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -7,6 +7,34 @@
   keywords	= {music harmony and theory}
 }
 
+@Article{cohn98:introduction,
+  author =       {Richard Cohn},
+  title =        {Introduction to Neo-riemannian Theory: a survey and
+                  a historical perspective},
+  journal =      {Journal of Music Theory},
+  year =         1998,
+  volume =    42,
+  number =    2,
+  pages =     {167--180},
+ abstract = {The papers collected in this issue represent an emerging
+                  species of transformational theory drawn together
+                  under the "Neo-Riemannian" designation. This
+                  introductory essay sketches the origins and recent
+                  development of neo-Riemannian theory, and positions
+                  it with respect to several other genera of music
+                  theory, as well as to an evolving post-structuralist
+                  critical practice. Along the way, it seeks to
+                  situate Hugo Riemann amidst the flurry of activity
+                  occuring beneath the banner bearing his name, and to
+                  provide comfort to the perplexed observer who,
+                  innocently prying apart these covers and peering
+                  within, spies the theoretical tradition of
+                  A. B. Marx and Oettingen romping merrily with that
+                  of Babbitt, Forte, and Morris. Strange fellows
+                  indeed!... or perhaps, upon reflection, not so
+                  strange....}
+}
+
 @Article{	  willner96:more,
   title		= {More on Handel and the Hemiola: Overlapping Hemiolas},
   volume	= 2,
