Insere referências seminários em composição

--- a/composition.bib
+++ b/composition.bib
@@ -174,3 +174,11 @@
   year		= 1988,
   keywords	= {composition}
 }
+
+@Book{reynolds02:form,
+  author =    {Roger Reynolds},
+  title =        {Form and method: composing music},
+  publisher =    {Routledge},
+  year =         2002,
+  address =   {New York/London}
+}
