--- a/counterpoint.bib
+++ b/counterpoint.bib
@@ -19,6 +19,16 @@
   keywords	= {counterpoint}
 }
 
+@PhdThesis{burkett99:counterpoint,
+  author =       {Lyn Ellen Thornblad Burkett},
+  title =        {Counterpoint as a Model for Post-Tonal Experimental Music:
+   Theories of Seeger, Krenek, Hindemith, and Schoenberg},
+  school =       {Indiana University},
+  year =         1999,
+  type =      {PhD Dissertation},
+  keywords	= {counterpoint}
+}
+
 @Book{		  carvalho06:contraponto,
   title		= {Contraponto Modal: manual prático},
   publisher	= {Evangraf},
