--- a/music-emotion.bib
+++ b/music-emotion.bib
@@ -8,3 +8,12 @@
   address	= {New York, NY},
   keywords	= {music emotion}
 }
+
+@Book{meyer84:emotion,
+  author =    {Leonard B. Meyer},
+  title =        {Emotion and Meaning in Music},
+  publisher =    {The University of Chicago Press},
+  year =         1984,
+  address =   {Chicago and London}
+}
+
