Insere artigo do goiaba - sbcm

--- a/genos.bib
+++ b/genos.bib
@@ -60,3 +60,11 @@
   month =     {Dec},
   year =      2008}
 
+@InProceedings{sampaio.ea09:goiaba,
+  author =       {Marcos Sampaio and Pedro Kröger},
+  title =        {Goiaba: a software to process musical contours},
+  booktitle = {Proceedings of the 12th Brazilian Symposium on Computer Music},
+  pages =     {203--206},
+  year =      2009,
+  address =   {Recife, Brazil}
+}
