Insere mais bibliografia seminários em composição

--- a/seminarios-composicao.bib
+++ b/seminarios-composicao.bib
@@ -25,3 +25,26 @@
   number =    2,
   pages =     {27--41}
 }
+
+@Article{winter06:bifonia,
+  author =       {Leonardo Loureiro Winter},
+  title =        {A bifonia fundamental nas "{Q}uatro estações do
+                  sonho" opus 129 de {E}rnst {W}idmer: origem,
+                  transformação referenciais sonoros},
+  journal =      {Em pauta},
+  year =         2006,
+  volume =    17,
+  number =    28,
+  pages =     {5--18}
+}
+
+@InProceedings{winter05:elementos,
+  author =       {Leonardo Loureiro Winter},
+  title =        {Elementos paradoxais nas "{Q}uatro estações do
+                  sonho", opus 129 de {E}rnst {W}idmer},
+  booktitle = {Anais do XV Congresso da ANPPOM},
+  pages =     {286--295},
+  year =      2005,
+  address =   {Rio de Janeiro},
+  publisher = {UFRJ}
+}
