Insere artigo sobre csim

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -839,6 +839,16 @@
   keywords	= {melodic contour}
 }
 
+@Article{shmulevich04:note,
+  author =       {Ilya Shmulevich},
+  title =        {A Note on the Pitch Contour Similarity Index},
+  journal =      {Journal of New Music Research},
+  year =         2004,
+  volume =    33,
+  number =    1,
+  pages =     {17--18},
+  month =     {March}}
+
 @Article{	  teitelbaum65:intervallic,
   title		= {Intervallic Relations in Atonal Music},
   author	= {Richard Teitelbaum},
