Insere tese contornos

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -60,6 +60,57 @@
   keywords	= {melodic contour}
 }
 
+@PhdThesis{bor09:contour,
+  author =       {Mustafa Bor},
+  title =        {Contour reduction algorithms : a theory of pitch and duration hierarchies for post-tonal music},
+  school =       {The University of British Columbia},
+  year =         2009,
+  type =      {PhD Thesis},
+  address =   {Vancouver},
+  abstract = {This dissertation takes work on contour by Robert Morris
+                  as a point of departure and develops a set of
+                  contour reduction algorithms, called "window
+                  algorithms." These involve the notion of a
+                  hypothetical window or frame of a specific width
+                  (i.e. number of events) through which the contour
+                  succession in a given melody is experienced
+                  temporally (much like the way a landscape is
+                  experienced visually through the side window of a
+                  moving automobile or train. Certain normative
+                  principles relevant to windows of various widths are
+                  devised and represented with the help of symbolic
+                  logic and flowcharts. Reiterative application of the
+                  window algorithms on a melody to "prune" pitches at
+                  a series of successive levels, introduces notions of
+                  melodic contour hierarchy that are explored in
+                  various ways throughout the dissertation. The
+                  application of the algorithms is demonstrated on a
+                  variety of 20th century musical excerpts reflecting
+                  a wide range of melodic archetypes, thereby enabling
+                  observation of the behavior of the algorithms in
+                  different musical contexts. Phenomenological and
+                  cognitive implications of the algorithms are
+                  discussed from the perspective of a listener
+                  implementing the algorithm on the fly. An analysis
+                  focusing on the Hauptstimmen in the first movement
+                  of Schoenberg’s Third String Quartet explores how
+                  intervallic features of the reduced contours can
+                  form the basis for a tonal-formal reading of the
+                  movement. The possibility of extending the theory to
+                  the duration domain is also introduced; following a
+                  preliminary analysis involving instrumental gestures
+                  from the opening of Webern’s Variations for
+                  Orchestra, and a discussion of analytical,
+                  conceptual, and methodological inconsistencies
+                  arising from the application of the algorithms on
+                  duration contours, an alternative approach that
+                  attaches appropriate durations to (reduced) pitch
+                  contours is developed, examined, and advocated. The
+                  relationships and interactions between the pitch and
+                  duration contours in Berio’s Sequenza I are examined
+                  in the light of the proposed theory.}
+}
+
 @Article{	  brown68:program,
   author	= {Charles T. Brown},
   title		= {A program to determine the melodic contour of a melody},
