add new entries

--- a/computer-music.bib
+++ b/computer-music.bib
@@ -38,6 +38,15 @@
   keywords =     {computer music}
 }
 
+@PhdThesis{anders07:composing,
+  title =        {{Composing Music by Composing Rules: Design and
+                  Usage of a Generic Music Constraint System}},
+  author =       {Anders, T.},
+  year =         2007,
+  school =       {School of Music and Sonic Arts, Queen’s University
+                  Belfast}
+}
+
 @Article{	  anderson86:accurately,
   author =       {David P. Anderson and Ron Kuivila},
   title =        {Accurately timed generation of discrete musical
@@ -283,6 +292,17 @@
   year =         1998,
   keywords =     {computer music},
   where =        {thesis-finale.pdf}
+}
+
+@inproceedings{cambouropoulos01:automatic,
+  title =        {{Automatic pitch spelling: From numbers to sharps
+                  and flats}},
+  author =       {Cambouropoulos, E.},
+  booktitle =    {VIII Brazilian Symposium on Computer Music (SBC\&M
+                  2001), Fortaleza, Brazil},
+  pages =        {2001--12},
+  year =         2001,
+  keywords =     {codification}
 }
 
 @Manual{	  castan02:music,
@@ -653,6 +673,17 @@
   where =        {modeling-music-notation.pdf}
 }
 
+@InProceedings{douthett.ea09:formal,
+  title =        {{Formal Diatonic Intervallic Notation}},
+  author =       {Douthett, J. and Hook, J.},
+  booktitle =    {Mathematics and Computation in Music: Second
+                  International Conference, MCM 2009, New Haven, CT,
+                  USA, June 19-22, 2009. Proceedings},
+  pages =        104,
+  year =         2009,
+  organization = {Springer}
+}
+
 @InProceedings{	  droettboom01:expressive,
   author =       {Droettboom, M. and Fujinaga, I. and MacMillan, K.
                   and Patton, M. and Warner, J. and Choudhury, G. S.
@@ -688,6 +719,16 @@
   lastaccess =   {2002-07-09},
   keywords =     {computer music},
   where =        {guido-mudela-format.pdf}
+}
+
+@article{ebcioglu90:expert,
+  title =        {{An expert system for harmonizing chorales in the
+                  style of JS Bach}},
+  Author =       {Кем Al Ebcioglu},
+  Journal =      {The Journal of Logic Programming},
+  volume =       10,
+  pages =        {145--1X5},
+  year =         1990
 }
 
 @InProceedings{	  fitsioris.ea08:parallel,
@@ -776,6 +817,16 @@
   keywords =     {computer music}
 }
 
+@article{haus2005music,
+  title =        {{Music segmentation: an xml-oriented approach}},
+  author =       {Haus, G. and Ludovico, L.A.},
+  journal =      {Lecture Notes in Computer Science},
+  volume =       3310,
+  pages =        2005,
+  year =         2005,
+  publisher =    {Springer}
+}
+
 @Article{	  haynes80:musician,
   author =       {Stanley Haynes},
   title =        {The musician-machine interface in digital sound
@@ -787,6 +838,14 @@
   pages =        {23--44},
   keywords =     {computer music},
   where =        {paper}
+}
+
+@InProceedings{heinrich09:software,
+  author =       {Heinrich Taube, William Andrew Burnson},
+  title =        {Software for Teaching Music Theory},
+  booktitle =    {Proceedings of the 2009 International Computer Music
+                  Conference},
+  year =         2009
 }
 
 @Article{	  hewlett92:base-40,
@@ -968,6 +1027,21 @@
   where =        {MusicKit-NWExpo93.pdf}
 }
 
+@article{jan04:meme,
+  author =       {Jan, Steven},
+  title =        {Meme Hunting with the Humdrum Toolkit: Principles,
+                  Problems, and Prospects},
+  journal =      {Computer Music Journal},
+  volume =       28,
+  number =       4,
+  pages =        {68-84},
+  year =         2004,
+  keywords =     {humdrum},
+  doi =          {10.1162/0148926042728403},
+  URL =
+                  {http://www.mitpressjournals.org/doi/abs/10.1162/0148926042728403},
+}
+
 @InCollection{	  karpen00:pvoc,
   author =       {Richard Karpen},
   editor =       {Richard Boulanger},
@@ -1002,6 +1076,18 @@
   keywords =     {computational musicology}
 }
 
+@article{laurson.ea09:overview,
+  title =        {{An overview of pwgl, a visual programming
+                  environment for music}},
+  author =       {Laurson, M. and Kuuskankare, M. and Norilo, V.},
+  journal =      {Computer Music Journal},
+  volume =       33,
+  number =       1,
+  pages =        {19--31},
+  year =         2009,
+  publisher =    {MIT Press}
+}
+
 @InProceedings{	  laurson99:pwcollider,
   author =       {M. Laurson},
   title =        {PWCollider: a visual composition tool for software
@@ -1014,6 +1100,25 @@
   publisher =    cma,
   where =        {pwcollider.pdf},
   keywords =     {computer music}
+}
+
+@InProceedings{lazzarini.ea06:spectral,
+  author =       {Lazzarini, Victor and Timoney, J. and Lysaght, T.},
+  title =        {Spectral Signal Processing in Csound 5},
+  booktitle =    {Proceedings of the 2006 International Computer Music
+                  Conference},
+  year =         2006
+}
+
+@Unpublished{lebar.ea08:classifying,
+  title =        {{Classifying Musical Scores by Composer: A machine
+                  learning approach}},
+  author =       {Lebar, J. and Chang, G. and Yu, D.},
+  url =
+                  {http://www.stanford.edu/class/cs229/proj2008/LebarChangYu-ClassifyingMusicalScoresByComposer.pdf},
+  note =         {It was a final project for a Stanford class},
+  year =         2008,
+  keywords =     {humdrum}
 }
 
 @Article{	  lent89:accelerando,
@@ -1380,6 +1485,13 @@
   keywords =     {computer music}
 }
 
+@Unpublished{pinto09:notes,
+  author =       {Alberto Pinto},
+  title =        {Notes on Music Segmentation (a first draft...)},
+  note =         {},
+  year =         2009
+}
+
 @Article{	  pope89:machine,
   author =       {Stephen Travis Pope},
   title =        {Machine tongues {XI}: object-oriented software
@@ -1632,6 +1744,15 @@
   where =        {paper}
 }
 
+@inproceedings{rohrmeier.ea08:statistical,
+  year =         2008,
+  title =        {{Statistical Properties of Tonal Harmony in Bach’s
+                  Chorales}},
+  author =       {Rohrmeier, M. and Cross, I.},
+  booktitle =    {Proceedings of the 10th International Conference of
+                  Music Perception and Cognition}
+}
+
 @InProceedings{	  rossignol01:refined,
   author =       {Rossignol, S. and Desain, P. and and Honing, H.},
   title =        {Refined knowledge-based pitch tracking: comparing
@@ -1647,6 +1768,15 @@
   fixme =        {page numbers}
 }
 
+@Article{sapp07:computational,
+  author =       {Craig Stuart Sapp},
+  title =        {Computational Chord-Root Identification in Symbolic
+                  Musical Data: Rationale, Methods, and Applications},
+  journal =      {Computing in Musicology},
+  year =         2007,
+  volume =       15
+}
+
 @Article{	  scaletti02:computer,
   author =       {Carla Scaletti},
   title =        {Computer music languages, kyma, and the future},
@@ -1657,6 +1787,15 @@
   pages =        {69--82},
   where =        {kyma02.pdf},
   keywords =     {computer music}
+}
+
+@inproceedings{scholz.ea05:automating,
+  title =        {{Automating functional harmonic analysis: the
+                  Funchal system}},
+  author =       {Scholz, R. and Dantas, V. and Ramalho, G.},
+  booktitle =    {Seventh IEEE International Symposium on Multimedia},
+  pages =        6,
+  year =         2005
 }
 
 @Manual{	  schottstaedt02:clm,
