--- a/computer-science.bib
+++ b/computer-science.bib
@@ -122,6 +122,15 @@
   keywords =     {ai}
 }
 
+@Article{burgess.ea07:crosstex,
+  title =        {{CrossTEX: A modern bibliography management tool}},
+  author =       {Burgess, R. and Sirer, E.G.},
+  year =         2007,
+  journal =      {TUGboat},
+  volume =       28,
+  number =       3
+}
+
 @InProceedings{	  chai.ea01:folk,
   title =        {{Folk music classification using hidden Markov
                   models}},
@@ -140,6 +149,33 @@
   year =         2008,
   booktitle =    {Proceedings of ACL/HLT 2008},
   keywords =     {top mestrado}
+}
+
+@InProceedings{clinger08:scheme,
+  author =       {Clinger, William D},
+  title =        {Scheme@33},
+  booktitle =    {LISP50: Celebrating the 50th Anniversary of Lisp},
+  year =         2008,
+  isbn =         {978-1-60558-383-9},
+  pages =        {1--5},
+  location =     {Nashville, Tennessee},
+  doi =          {http://doi.acm.org/10.1145/1529966.1529973},
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
+}
+
+@inproceedings{costanza08:context,
+  author =       {Costanza, Pascal},
+  title =        {Context-oriented programming in ContextL: state of
+                  the art},
+  booktitle =    {LISP50: Celebrating the 50th Anniversary of Lisp},
+  year =         2008,
+  isbn =         {978-1-60558-383-9},
+  pages =        {1--5},
+  location =     {Nashville, Tennessee},
+  doi =          {http://doi.acm.org/10.1145/1529966.1529970},
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
 }
 
 @Book{		  courant.ea96:what,
@@ -329,6 +365,15 @@
   keywords =     {top mestrado}
 }
 
+@inproceedings{gabriel.ea08:pattern,
+  title =        {{A pattern of language evolution}},
+  author =       {Gabriel, R.P. and Steele Jr, G.L.},
+  booktitle =    {Celebrating the 50th Anniversary of Lisp},
+  pages =        {1--10},
+  year =         2008,
+  organization = {ACM}
+}
+
 @Article{	  gale.ea95:good,
   title =        {{Good-turing frequency estimation without tears}},
   author =       {Gale, W.A. and Sampson, G.},
@@ -412,6 +457,21 @@
   pages =        {541--544},
   year =         2003,
   keywords =     {top mestrado}
+}
+
+@article{hull.ea08:defrosting,
+  author =       {Hull, Duncan AND Pettifer, Steve R. AND Kell,
+                  Douglas B.},
+  journal =      {PLoS Comput Biol},
+  publisher =    {Public Library of Science},
+  title =        {Defrosting the Digital Library: Bibliographic Tools
+                  for the Next Generation Web},
+  year =         2008,
+  month =        10,
+  volume =       4,
+  pages =        {e1000204},
+  number =       10,
+  doi =          {10.1371/journal.pcbi.1000204}
 }
 
 @Article{	  hung.ea04:hybrid,
@@ -784,6 +844,21 @@
   keywords =     {top mestrado}
 }
 
+@inproceedings{marshall08:writing,
+  author =       {Marshall, Catherine C.},
+  title =        {From writing and analysis to the repository: taking
+                  the scholars' perspective on scholarly archiving},
+  booktitle =    {Proceedings of the 8th ACM/IEEE-CS joint conference
+                  on Digital libraries},
+  year =         2008,
+  isbn =         {978-1-59593-998-2},
+  pages =        {251--260},
+  location =     {Pittsburgh PA, PA, USA},
+  doi =          {http://doi.acm.org/10.1145/1378889.1378930},
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
+}
+
 @Article{	  marx02:xml,
   author =       {Marx},
   title =        {XML and verbosity},
@@ -894,6 +969,17 @@
   keywords =     {top mestrado}
 }
 
+@article{moura.ea09:revisiting,
+  title =        {{Revisiting coroutines}},
+  author =       {Ana Lúcia de Moura and Roberto Ierusalimschy},
+  journal =      {ACM Transactions on Programming Languages and
+                  Systems},
+  volume =       31,
+  number =       2,
+  pages =        {6--1},
+  year =         2009,
+}
+
 @Book{		  neal.ea93:probabilistic,
   title =        {{Probabilistic Inference Using Markov Chain Monte
                   Carlo Methods}},
@@ -980,6 +1066,19 @@
   organization = {Association for Computational Linguistics
                   Morristown, NJ, USA},
   keywords =     {top mestrado}
+}
+
+@inproceedings{pitman08:common,
+  author =       {Pitman, Kent M.},
+  title =        {Common Lisp: the untold story},
+  booktitle =    {LISP50: Celebrating the 50th Anniversary of Lisp},
+  year =         2008,
+  isbn =         {978-1-60558-383-9},
+  pages =        {1--12},
+  location =     {Nashville, Tennessee},
+  doi =          {http://doi.acm.org/10.1145/1529966.1529972},
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
 }
 
 @Article{	  porter80:algorithm,
@@ -1129,6 +1228,20 @@
   keywords =     {top mestrado}
 }
 
+@inproceedings{steele82:overview,
+  author =       {Steele,Jr., Guy L.},
+  title =        {An overview of COMMON LISP},
+  booktitle =    {LFP '82: Proceedings of the 1982 ACM symposium on
+                  LISP and functional programming},
+  year =         1982,
+  isbn =         {0-89791-082-6},
+  pages =        {98--107},
+  location =     {Pittsburgh, Pennsylvania, United States},
+  doi =          {http://doi.acm.org/10.1145/800068.802140},
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
+}
+
 @InProceedings{	  steinbach.ea00:comparison,
   title =        {{A comparison of document clustering techniques}},
   author =       {Steinbach, M. and Karypis, G. and Kumar, V.},
@@ -1137,6 +1250,19 @@
   pages =        35,
   year =         2000,
   keywords =     {top mestrado}
+}
+
+@inproceedings{stoyan08:lisp,
+  author =       {Stoyan, Herbert},
+  title =        {Lisp 50 years ago},
+  booktitle =    {LISP50: Celebrating the 50th Anniversary of Lisp},
+  year =         2008,
+  isbn =         {978-1-60558-383-9},
+  pages =        {1--2},
+  location =     {Nashville, Tennessee},
+  doi =          {http://doi.acm.org/10.1145/1529966.1529969},
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
 }
 
 @InProceedings{	  strehl.ea00:impact,
@@ -1156,6 +1282,19 @@
   note =         "Submitted to Encyclopedia of Machine Learning",
   year =         2007,
   keywords =     {ai}
+}
+
+@inproceedings{teitelman08:history,
+  author =       {Teitelman, Warren},
+  title =        {History of Interlisp},
+  booktitle =    {LISP50: Celebrating the 50th Anniversary of Lisp},
+  year =         2008,
+  isbn =         {978-1-60558-383-9},
+  pages =        {1--5},
+  location =     {Nashville, Tennessee},
+  doi =          {http://doi.acm.org/10.1145/1529966.1529971},
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
 }
 
 @InProceedings{terra.ea03:frequency,
@@ -1213,6 +1352,21 @@
   year =         2006,
   organization = {Society for Industrial Mathematics},
   keywords =     {top mestrado}
+}
+
+@inproceedings{white.ea08:massively,
+  author =       {White, Jonl and Bourbaki, Nickieben},
+  title =        {From massively monster machines to microchips:
+                  forces affecting Lisp language design for five
+                  decades},
+  booktitle =    {LISP50: Celebrating the 50th Anniversary of Lisp},
+  year =         2008,
+  isbn =         {978-1-60558-383-9},
+  pages =        {1--2},
+  location =     {Nashville, Tennessee},
+  doi =          {http://doi.acm.org/10.1145/1529966.1529968},
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
 }
 
 @InProceedings{	  wu.ea94:verb,
