--- a/music.bib
+++ b/music.bib
@@ -1948,6 +1948,17 @@
   keywords =     {perception}
 }
 
+@article{hall08:geometrical,
+  title =        {{Geometrical music theory}},
+  author =       {Rachel Wells Hall},
+  journal =      {Science},
+  volume =       320,
+  number =       5874,
+  pages =        328,
+  year =         2008,
+  Publisher =    {American Association For The Advancement Of Science}
+}
+
 @Book{		  handschin48:musikgeschichte,
   title =        {Musikgeschichte im Überblick},
   publisher =    {Räber},
@@ -2070,6 +2081,18 @@
   number =       3,
   pages =        {241-244},
   keywords =     {music analysis}
+}
+
+@article{hook07:cross,
+  title =        {{Cross-type transformations and the path consistency
+                  condition}},
+  author =       {Hook, J.},
+  journal =      {Music Theory Spectrum},
+  volume =       29,
+  number =       1,
+  pages =        {1--40},
+  year =         2007,
+  publisher =    {Univ California Press}
 }
 
 @Book{		  hopkins93:sounds,
@@ -2471,6 +2494,19 @@
   address =      {Brasília},
   year =         2006,
   keywords =     {harmonic analysis}
+}
+
+@article{kuusi07:subset,
+  title =        {{Subset-Class Relation, Common Pitches, and Common
+                  Interval Structure Guiding Estimations of
+                  Similarity}},
+  author =       {Kuusi, T.},
+  journal =      {Music Perception},
+  volume =       25,
+  number =       1,
+  pages =        {1--11},
+  year =         2007,
+  publisher =    {Univ California Press}
 }
 
 @Book{		  la-fage44:histoire,
@@ -3276,6 +3312,16 @@
   keywords =     {composition}
 }
 
+@Article{november07:register,
+  author =       {Nancy November},
+  title =        {Register in Haydn's String Quartets: Four Case
+                  Studies},
+  journal =      {Music Analysis},
+  year =         2007,
+  volume =       3,
+  pages =        {289-322}
+}
+
 @InBook{	  oliveira94:musica,
   author =       {Jamary Oliveira},
   chapter =      {Pseudópodes II},
@@ -3821,6 +3867,19 @@
                   do estudo do seu funcionamento e papel
                   sociocultural.},
   keywords =     {musicology}
+}
+
+@article{roeder89:harmonic,
+  title =        {{Harmonic Implications of Schoenberg's" Observations
+                  of Atonal Voice Leading"}},
+  author =       {Roeder, J.},
+  journal =      {Journal of Music Theory},
+  volume =       33,
+  number =       1,
+  pages =        {27--62},
+  year =         1989,
+  publisher =    {Duke University Press; Yale University Department of
+                  Music}
 }
 
 @Article{	  roeder97:review,
@@ -4548,6 +4607,17 @@
                   specific compositional realization in pitch space.}
 }
 
+@article{straus07:voice,
+  title =        {{Voice leading in set-class space}},
+  author =       {Straus, J.},
+  journal =      {Journal of Music Theory},
+  volume =       49,
+  number =       1,
+  pages =        {45--108},
+  year =         2007,
+  publisher =    {Duke Univ Press}
+}
+
 @Book{		  straus90:introduction,
   title =        {Introduction to post-tonal theory},
   publisher =    {Prentice Hall},
@@ -4744,6 +4814,17 @@
   keywords =     {melodic contour}
 }
 
+@article{thomassen83:erratum,
+  title =        {{Erratum: Melodic accent: experiments and a
+                  tentative model}},
+  author =       {Thomassen, JM},
+  journal =      {The Journal of the Acoustical Society of America},
+  volume =       73,
+  number =       1,
+  pages =        373,
+  year =         1983
+}
+
 @Book{		  toch48:shaping,
   title =        {The Shaping Forces in Music},
   publisher =    {Criterion Music Corp},
@@ -4769,6 +4850,16 @@
   year =         2002,
   file =         {Tsui_MASc.pdf},
   keywords =     {harmonic analysis}
+}
+
+@article{tymoczko08:scale,
+  title =        {{Scale Theory, Serial Theory, and Voice Leading}},
+  author =       {Tymoczko, D.},
+  journal =      {Music Analysis},
+  volume =       27,
+  number =       1,
+  pages =        {1--49},
+  year =         2008,
 }
 
 @Book{		  ulrich.ea63:history,
@@ -4832,6 +4923,17 @@
   year =         1997,
   file =         {generating-guitar-scores-from.pdf},
   keywords =     {harmonic analysis}
+}
+
+@PhdThesis{wasson02:elevators,
+  title =        {{Elevators and escalators: the study of an
+                  innovative approach to teaching fingerboard
+                  geography to heterogeneous string classes}},
+  author =       {Wasson, G.D.},
+  school =       {The University of Texas at Austin},
+  volume =       64,
+  number =       03,
+  year =         2002
 }
 
 @Book{		  webern92:funf,
