add 'Data-driven exploration of musical chord sequences'

--- a/computer-music.bib
+++ b/computer-music.bib
@@ -1264,6 +1264,20 @@
   where =        {00084842.pdf}
 }
 
+@inproceedings{nichols.ea09:data,
+  author =       {Nichols, Eric and Morris, Dan and Basu, Sumit},
+  title =        {Data-driven exploration of musical chord sequences},
+  booktitle =    {Proceedings of the 13th international conference on
+                  Intelligent user interfaces},
+  year =         2009,
+  isbn =         {978-1-60558-168-2},
+  pages =        {227--236},
+  location =     {Sanibel Island, Florida, USA},
+  doi =          {http://doi.acm.org/10.1145/1502650.1502683},
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
+}
+
 @Article{	  oliveira01:busca,
   author =       {Jamary Oliveira},
   title =        {Em busca de uma codificação},
