add temperley paper

--- a/computer-music.bib
+++ b/computer-music.bib
@@ -1963,6 +1963,12 @@
   keywords =     {computer music}
 }
 
+@Unpublished{temperley:statistical,
+  author =       {David Temperley},
+  title =        {A Statistical Analysis of Tonal Harmony},
+  note =         {Article in Temperley's web page},
+  url =          {http://theory.esm.rochester.edu/temperley/kp-stats/index.html}}
+
 @InProceedings{	  timmers00:vibrato,
   author =       {Timmers, R. and Desain, P.},
   title =        {Vibrato: the questions and answers from musicians
