--- a/latex/ementa.sty
+++ b/latex/ementa.sty
@@ -9,26 +9,11 @@
 %\usepackage{fourier}
 \usepackage{times}
 
+\newcommand{\eng}[1]{\textit{#1}}
+
 \newcommand{\titulo}[1]{
   {\large \textsf{\textbf{#1}}} \\
 }
-
-% \newcommand{\disciplina}[1]{
-%   \ifthenelse{\equal{#1}{009}}{MUS #1 --- LEM I}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{010}}{MUS #1 --- LEM II}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{011}}{MUS #1 --- LEM III}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{012}}{MUS #1 --- LEM IV}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{013}}{MUS #1 --- LEM V}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{110}}{MUS #1 --- Composição III}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{111}}{MUS #1 --- Composição IV}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{112}}{MUS #1 --- Composição V}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{113}}{MUS #1 --- Composição VI}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{114}}{MUS #1 --- Composição VII}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{115}}{MUS #1 --- Composição VIII}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{506}}{MUS #1 --- Informática em Música II}{\hspace{-1ex}}
-%   \ifthenelse{\equal{#1}{A56}}{MAT #1 --- Paradigmas de Linguagens de
-%     Programação}{\hspace{-1ex}}
-% }
 
 \newcommand{\disciplina}[1]{
   \ifthenelse{\equal{#1}{009}}
@@ -41,27 +26,30 @@
         {MUS #1 --- LEM IV}
         {\ifthenelse{\equal{#1}{013}}
           {MUS #1 --- LEM V}
-        {\ifthenelse{\equal{#1}{104}}
-          {MUS #1 --- Instrumentação e Orquestração I}
-          {\ifthenelse{\equal{#1}{105}}
-            {MUS #1 --- Instrumentação e Orquestração II}
-          {\ifthenelse{\equal{#1}{110}}
-            {MUS #1 --- Composição III}
-            {\ifthenelse{\equal{#1}{111}}
-              {MUS #1 --- Composição IV}
-              {\ifthenelse{\equal{#1}{112}}
-                {MUS #1 --- Composição V}
-                {\ifthenelse{\equal{#1}{113}}
-                  {MUS #1 --- Composição VI}
-                  {\ifthenelse{\equal{#1}{114}}
-                    {MUS #1 --- Composição VII}
-                    {\ifthenelse{\equal{#1}{115}}
-                      {MUS #1 --- Composição VIII}
-                      {\ifthenelse{\equal{#1}{A56}}
-                        {MAT #1 --- Paradigmas de Linguagens de
-                          Programação}
-                        {\ifthenelse{\equal{#1}{506}}
-                          {MUS #1 --- Informática em Música II}}}}}}}}}}}}}}
+          {\ifthenelse{\equal{#1}{104}}
+            {MUS #1 --- Instrumentação e Orquestração I}
+            {\ifthenelse{\equal{#1}{105}}
+              {MUS #1 --- Instrumentação e Orquestração II}
+              {\ifthenelse{\equal{#1}{110}}
+                {MUS #1 --- Composição III}
+                {\ifthenelse{\equal{#1}{111}}
+                  {MUS #1 --- Composição IV}
+                  {\ifthenelse{\equal{#1}{112}}
+                    {MUS #1 --- Composição V}
+                    {\ifthenelse{\equal{#1}{113}}
+                      {MUS #1 --- Composição VI}
+                      {\ifthenelse{\equal{#1}{114}}
+                        {MUS #1 --- Composição VII}
+                        {\ifthenelse{\equal{#1}{115}}
+                          {MUS #1 --- Composição VIII}
+                          {\ifthenelse{\equal{#1}{A56}}
+                            {MAT #1 --- Paradigmas de Linguagens de
+                              Programação}
+                            {\ifthenelse{\equal{#1}{052}}
+                              %% inserir nome da disciplina MAT052
+                              {MAT #1 --- Título da disciplina}
+                              {\ifthenelse{\equal{#1}{506}}
+                                {MUS #1 --- Informática em Música II}}}}}}}}}}}}}}}}}
 
 \newcommand{\professor}[1]{
   \ifthenelse{\equal{#1}{pedro}}
@@ -71,28 +59,36 @@
     {\ifthenelse{\equal{#1}{guilherme}}
       {Guilherme Berstissolo \url{<guilhermebertissolo@gmail.com>}}}}}
 
-\newcommand{\cabecalho}[2]{
-  \large
-  \titulo{UNIVERSIDADE FEDERAL DA BAHIA}
+\newcommand{\paginadisciplina}[2]{
+  \ifthenelse{\equal{#2}{marcos}}
+  {http://marcosdisilva.net/pt/ensino/mus#1.html}
+  {\ifthenelse{\equal{#2}{pedro}}
+    {http://genos.mus.br/aulas/\ifthenelse{\equal{#1}{A56}}{mata56}{mus#1}}{}\\
+    \ifthenelse{\equal{#1}{052}}
+    {\textbf{Cadastro e histórico da lista de discussão:} \textsf{listas.dcc.ufba.br/pipermail/mat052t01}}
+    {}
+  }
+}
+
+\newcommand{\departamento}[1]{
   \ifthenelse{\equal{#1}{A56}}
   {\titulo{INSTITUTO DE MATEMÁTICA}
     \titulo{DEPARTAMENTO DE CIÊNCIA DA COMPUTAÇÃO}}
-  {\titulo{ESCOLA DE MÚSICA}
-    \titulo{DEPARTAMENTO DE CLEM}}
-  \textbf{Disciplina}:\disciplina{#1}\,---\,#2\\
-  \textbf{Prof.}: Pedro Kröger \url{<pedro.kroger@gmail.com>} \\
-  % \textbf{Prof.}: \professor{#1} \\
-  % \ifthenelse{\equal{#1}{marcos}}
-  % \textbf{Página da disciplina:} http://marcosdisilva.net/pt/ensino/{mus#1}.html \\
-  % \ifthenelse{\equal{#1}{pedro}}
-  % \textbf{Página da disciplina:} http://genos.mus.br/aulas/\ifthenelse{\equal{#1}{A56}}{mata56}{mus#1} \\
-  % \ifthenelse{\equal{#1}{052}}
-  % {\textbf{Cadastro e histórico da lista de discussão:} \textsf{listas.dcc.ufba.br/pipermail/mat052t01}}
-  % {}
-  \textbf{Página da disciplina:} http://genos.mus.br/aulas/\ifthenelse{\equal{#1}{A56}}{mata56}{mus#1} \\
-  \ifthenelse{\equal{#1}{052}}
-  {\textbf{Cadastro e histórico da lista de discussão:} \textsf{listas.dcc.ufba.br/pipermail/mat052t01}}
-  {}
+  {\ifthenelse{\equal{#1}{052}}
+    {\titulo{INSTITUTO DE MATEMÁTICA}
+      \titulo{DEPARTAMENTO DE CIÊNCIA DA COMPUTAÇÃO}}
+    {\titulo{ESCOLA DE MÚSICA}
+      \titulo{DEPARTAMENTO DE CLEM}}}
+}
+
+\newcommand{\cabecalho}[2]{
+  \large
+  \titulo{UNIVERSIDADE FEDERAL DA BAHIA}
+  \departamento{#1}
+  \textbf{Disciplina}:\disciplina{#1}{} \\
+  \textbf{Prof.}: \professor{#2} \\
+  \ifthenelse{\equal{#2}{guilherme}}{}
+  {\textbf{Página da disciplina:} \paginadisciplina{#1}{#2}} \\
 }
 
 \setlength{\parindent}{0cm}
@@ -162,4 +158,13 @@
 % change this behavior back to normal, use the \normalem command, for
 % example
 \normalem
+
+%% exemplo de documento tex %%
+% \documentclass{article}
+% \usepackage{ementa}
+% \begin{document}
+% \cabecalho{009}{pedro}
+% conteúdo....
+% \end{document}
+%%
 
